# python-project-52

./: .coveragerc  .dockerignore  .env-example  .gitignore  Dockerfile  Makefile  README.md  build.sh  coverage.lcov  docker-compose.yaml  pyproject.toml  requirements.txt  ruff.toml  sonar-project.properties
.github/workflows/: project-check.yml
labels/: admin.py  forms.py  mixins.py  models.py  urls.py  views.py
labels/templates/labels/: create.html  delete.html  labels.html  update.html
locale/ru/LC_MESSAGES/: django.po
statuses/: admin.py  forms.py  mixins.py  models.py  urls.py  views.py
statuses/migrations/: 0001_initial.py  0002_delete_task.py
statuses/templates/statuses/: create.html  delete.html  update.html
task_manager/: settings.py  settings_test.py  test.py  urls.py  views.py
task_manager/labels/: admin.py  forms.py  mixins.py  tests.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py
task_manager/statuses/: admin.py  forms.py  mixins.py  models.py  tests.py  urls.py  views.py
task_manager/tasks/: admin.py  forms.py  mixins.py  models.py  tests.py  urls.py  views.py
task_manager/templates/: base.html  index.html  notifications.html
task_manager/users/: admin.py  forms.py  mixins.py  models.py  tests.py  urls.py  views.py
tasks/: admin.py  forms.py  mixins.py  models.py  urls.py  views.py
tasks/migrations/: 0001_initial.py  0002_initial.py  0003_alter_task_label.py
users/: admin.py  forms.py  mixins.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py
users/templates/: login.html
(+34 files in other folders)
